test/fail_compile/bad_deref2.tas
[A] -> [B + 0x12345]
